--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   faker: ^2.2.0
+  cached_network_image: ^3.4.1
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
